--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
         <div id="txthaut">
             <h1>BUISSET Jérémy</h1>
-            <h2>Aspirant Codeur</h2>
+            <h2>Dévleloppeur Web</h2>
         </div>
         <div id="logoMail">
             <a href="mailto:jeremybuisset@laposte.net"><img src="Images/Mail.png" height="32" width="32" alt="Mail"></a>
